# ESP32-DAPLink

./: .gitignore  .gitmodules  sdkconfig
components/DAP/Include/: DAP_config.h
main/: CMakeLists.txt  idf_component.yml  main.cpp  usb_cdc_handler.c  usb_desc.c  usb_desc.h
main/key/: esp_lvgl_port_indev.c  esp_lvgl_port_indev.h  task_key.c  task_key.h
main/lvgl_port/: user_lvgl_port.c  user_lvgl_port.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp_hook.c
main/ui/fonts/: ui_font_RobotoLight93.c  ui_font_RobotoMedium22.c  ui_font_RobotoMedium28.c  ui_font_RobotoRegular58.c
main/ui/images/: ui_img_image_logo_png.c  ui_img_image_tree_png.c
main/ui/screens/: ui_about_screen.c  ui_daplink_screen.c  ui_logo_screen.c  ui_menu_screen.c  ui_offlink_download_screen.c  ui_offlink_setting_screen.c  ui_usb_uart_screen.c
main/ui_event/: ui_about_screen_event.c  ui_about_screen_event.h  ui_custom.c  ui_custom.h  ui_daplink_screen_event.c  ui_daplink_screen_event.h  ui_logo_screen_event.c  ui_logo_screen_event.h  ui_menu_screen_event.c  ui_menu_screen_event.h  ui_usb_uart_screen_event.c  ui_usb_uart_screen_event.h
ui_design/: .gitignore  rts_link.sll  rts_link.spj
ui_design/assets/Roboto/: ui_font_RobotoLight93.fcfg  ui_font_RobotoMedium22.fcfg  ui_font_RobotoMedium28.fcfg  ui_font_RobotoRegular16.c  ui_font_RobotoRegular16.fcfg  ui_font_RobotoRegular38.c  ui_font_RobotoRegular38.fcfg  ui_font_RobotoRegular58.fcfg  ui_font_RobotoRegular65.c  ui_font_RobotoRegular65.fcfg
